ignore data files

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ package*
 # Don't allow committing data files
 /ml/data/raw/*
 /ml/data/processed/*
+/ml/models/*
 
 # ...but do allow .gitkeep files
-!/ml/data/raw/.gitkeep
-!/ml/data/processed/.gitkeep
+!/**/.gitkeep
